force-app/main/default/objects/Commitee_Opportunity_Junction__c/Commitee_Opportunity_Junction__c.object-meta.xml
<CustomObject>
    <label>Commitee Opportunity Junction</label>
    <nameField>
        <label>Commitee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitee Opportunity Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>