force-app/main/default/objects/Commitee_Opportunity_Junction__c/fields/Approval_Round__c.field-meta.xml
<CustomField>
    <fullName>Approval_Round__c</fullName>
    <label>Approval Round</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>