force-app/main/default/objects/Commitee_Opportunity_Junction__c/fields/Commitee__c.field-meta.xml
<CustomField>
    <fullName>Commitee__c</fullName>
    <label>Commitee</label>
    <referenceTo>Commitee__c</referenceTo>
    <relationshipLabel>Commitee Opportunity Junctions</relationshipLabel>
    <relationshipName>Commitee_Opportunity_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>