force-app/main/default/objects/Commitee_Opportunity_Junction__c/fields/Commitee_Decision__c.field-meta.xml
<CustomField>
    <fullName>Commitee_Decision__c</fullName>
    <label>Commitee Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Importance_Options</valueSetName>
    </valueSet>
</CustomField>