force-app/main/default/objects/Commitee_Opportunity_Junction__c/fields/Has_Approved__c.field-meta.xml
<CustomField>
    <fullName>Has_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Approved</label>
    <type>Checkbox</type>
</CustomField>