force-app/main/default/objects/Commitee_Opportunity_Junction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commitee Opportunity Junctions</relationshipLabel>
    <relationshipName>Commitee_Opportunity_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>